# angelscript-testing

./: CMakeLists.txt  README.md  conanfile.txt
TestScripts/: test.as
src/: HelperFunctions.cpp  HelperFunctions.h  Main.cpp
